# exp-audio-id-wains

./: README.md  diff-analysis.sh  exp-audio-id-wains.cabal  make-raw-files.sh  notes  results.csv  ronan.log.GOOD  run-noise.sh  run-prof.sh  run-spectrum.sh  run.sh  teach.log.GOOD
HTK_MFCC_endpointed/: diff-analysis.csv  diff-analysis.gnumeric  diff-analysis2.csv
HTK_MFCC_not_endpointed/: diff-analysis.csv  diff-analysis2.csv
src/ALife/Creatur/Wain/AudioID/: Action.hs  Daemon.hs  ExamineAgent.hs  Experiment.hs  GeneratePopulation.hs  Universe.hs
test/: BigTest.hs  DiffAnalysis.hs  LearningTest.hs  Main.hs  RonanTest.hs  SingleWain.hs  TeachingTest.hs
test/ALife/Creatur/Wain/AudioID/: ActionQC.hs  ExperimentQC.hs
